--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -12,22 +12,39 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   color: #cf0;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .markdown-content h1 {
   font-size: 2rem;
   font-weight: bold;
+  margin-top: .5rem;
+}
+
+.markdown-content ul{
+  display: grid;
+  gap:1rem;
 }
 
 .markdown-content p {
   font-size: 1rem;
   line-height: 1.6;
+  color: #dbdbdb;
 }
 
 .markdown-content strong {
   font-weight: bold;
 }
 
+.markdown-content pre{
+  color: #f6f6f6;
+  background-color: #1e1e1e;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+}
 
 @layer utilities {
   .text-balance {
