--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,76 +8,68 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.markdown-content h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #cf0;
-  margin-top: 2rem;
-  margin-bottom: 1.5rem;
-}
-
+/* Responsive styling for markdown content */
+.markdown-content-notes h1,
 .markdown-content h1 {
   font-size: 2rem;
   font-weight: bold;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  /* Larger font size on larger screens */
+  @apply md:text-xl lg:text-2xl xl:text-3xl;
 }
 
-.markdown-content ul{
-  display: grid;
-  gap:1rem;
-}
-
+.markdown-content-notes p ,
 .markdown-content p {
   font-size: 1rem;
   line-height: 1.6;
+  margin-top: 1rem;
   color: #dbdbdb;
+  /* Adjust font size and line height on larger screens */
+  @apply md:text-sm lg:text-base xl:text-lg;
 }
 
-.markdown-content strong {
-  font-weight: bold;
+.markdown-content-notes ul
+.markdown-content ul {
+  display: grid;
+  gap: 1rem;
+  /* Adjust gap between list items on larger screens */
+  @apply md:gap-2 lg:gap-4;
 }
 
-.markdown-content pre{
-  color: #f6f6f6;
-  background-color: #1e1e1e;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 2rem;
-}
-
+.markdown-content h2,
 .markdown-content-notes h2 {
   font-size: 1.5rem;
   font-weight: bold;
   color: #cf0;
   margin-top: 2rem;
   margin-bottom: 1.5rem;
+  /* Larger font size on larger screens */
+  @apply md:text-lg lg:text-xl xl:text-2xl;
 }
 
-.markdown-content-notes h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-top: .5rem;
-}
-
-.markdown-content-notes p {
-  font-size: 1rem;
-  line-height: 1.6;
-  color: #dbdbdb;
-}
-
-.markdown-content-notes strong {
-  font-weight: bold;
-}
-
-.markdown-content-notes pre{
+.markdown-content pre,
+.markdown-content-notes pre {
   color: #f6f6f6;
   background-color: #1e1e1e;
   padding: 1rem;
   border-radius: 0.5rem;
   margin-top: 1.5rem;
   margin-bottom: 2rem;
+  overflow-x: auto; /* Enable horizontal scrolling if content overflows */
+  white-space: pre-wrap; /* Keeps code formatting */
+  word-wrap: break-word; /* Break long words if necessary */
+  @apply md:p-4 md:my-4 lg:p-6 lg:my-6;
 }
+
+.markdown-content code,
+.markdown-content-notes code {
+  display: inline-block; /* Ensure inline display for code inside pre */
+  color: #cf0;
+  font-size: 0.875rem; /* Adjust as needed for readability */
+}
+
+
 
 @layer utilities {
   .text-balance {
